<resources>
    <string name="app_name">RobotSensorSample</string>

    <!-- TYPE_CAPACITY_TOUCH_TITLE -->
    <string name="sensor_type_capacity_touch_title">TYPE_CAPACITY_TOUCH</string>

    <string name="sensor_type_capacity_touch_value0_text"><![CDATA[value 0: Note : static_cast<int>. \nKey status (1: shortest, 2: short, 3: medium, 4: long):]]></string>
    <string name="sensor_type_capacity_touch_value0_value">N/A</string>

    <string name="sensor_type_capacity_touch_value1_text">value 1: Pressed duration (s):</string>
    <string name="sensor_type_capacity_touch_value1_value">N/A</string>


    <!-- TYPE_DROP_LASER -->
    <string name="sensor_type_drop_laser_title">TYPE_DROP_LASER</string>

    <string name="sensor_type_drop_laser_value0_text">value 0: Drop Laser info third (front right 60) (m):</string>
    <string name="sensor_type_drop_laser_value0_value">N/A</string>

    <string name="sensor_type_drop_laser_value1_text">value 1: Drop Laser info second (front left 60) (m):</string>
    <string name="sensor_type_drop_laser_value1_value">N/A</string>

    <string name="sensor_type_drop_laser_value2_text">value 2: Drop Laser info first (front center 60) (m):</string>
    <string name="sensor_type_drop_laser_value2_value">N/A</string>

    <string name="sensor_type_drop_laser_value3_text">value 3: Drop Laser rate third (front right 60) (mcps):</string>
    <string name="sensor_type_drop_laser_value3_value">N/A</string>

    <string name="sensor_type_drop_laser_value4_text">value 4: Drop Laser rate second (front right 60) (mcps):</string>
    <string name="sensor_type_drop_laser_value4_value">N/A</string>

    <string name="sensor_type_drop_laser_value5_text">value 5: Drop Laser rate first (front right 60) (mcps):</string>
    <string name="sensor_type_drop_laser_value5_value">N/A</string>


    <!-- TYPE_SONAR -->
    <string name="sensor_type_sonar_title">TYPE_SONAR</string>

    <string name="sensor_type_sonar_value0_text">value 0: Sonar front right (m):</string>
    <string name="sensor_type_sonar_value0_value">N/A</string>

    <string name="sensor_type_sonar_value1_text">value 1: Sonar front left (m):</string>
    <string name="sensor_type_sonar_value1_value">N/A</string>

    <string name="sensor_type_sonar_value2_text">value 2: Sonar front back (m):</string>
    <string name="sensor_type_sonar_value2_value">N/A</string>


    <!-- TYPE_ODOMETRY-->
    <string name="sensor_type_odometry_title">TYPE_ODOMETRY</string>

    <string name="sensor_type_odometry_value0_text">value 0: The current position of the base in task space in x axis (m):</string>
    <string name="sensor_type_odometry_value0_value">N/A</string>

    <string name="sensor_type_odometry_value1_text">value 1: The current position of the base in task space in y axis (m):</string>
    <string name="sensor_type_odometry_value1_value">N/A</string>

    <string name="sensor_type_odometry_value2_text">value 2: The current heading direction of the base in task space (Radian):</string>
    <string name="sensor_type_odometry_value2_value">N/A</string>


    <!-- TYPE_NECK_ENCODER -->
    <string name="sensor_type_neck_encoder_title">TYPE_NECK_ENCODER</string>

    <string name="sensor_type_neck_encoder_value0_text">value 0: Neck motor pitch position (Radian):</string>
    <string name="sensor_type_neck_encoder_value0_value">N/A</string>

    <string name="sensor_type_neck_encoder_value1_text"><![CDATA[value 1: Note : static_cast<int>. Neck status (As the following). \nBit 1 : Busy Pitch. \nBit 5 : Absolute Encoder Pitch FW Error. \nBit 7 : Absolute Encoder Pitch HW Error. ]]></string>
    <string name="sensor_type_neck_encoder_value1_value">N/A</string>


    <!-- TYPE_WHEEL_ENCODER -->
    <string name="sensor_type_wheel_encoder_title">TYPE_WHEEL_ENCODER</string>

    <string name="sensor_type_wheel_encoder_value0_text">value 0: Left wheel encoder (Radian):</string>
    <string name="sensor_type_wheel_encoder_value0_value">N/A</string>

    <string name="sensor_type_wheel_encoder_value1_text">value 1: Right wheel encoder (Radian):</string>
    <string name="sensor_type_wheel_encoder_value1_value">N/A</string>


    <!-- TYPE_AVOID_TARGET -->
    <string name="sensor_type_avoid_target_title">TYPE_AVOID_TARGET</string>

    <string name="sensor_type_avoid_target_value1_text">avoid target value 1:</string>
    <string name="sensor_type_avoid_target_value1_value">0</string>

    <string name="sensor_type_avoid_target_value2_text">avoid target value 2:</string>
    <string name="sensor_type_avoid_target_value2_value">0</string>

    <string name="sensor_type_avoid_target_value3_text">avoid target value 3:</string>
    <string name="sensor_type_avoid_target_value3_value">0</string>


    <!-- TYPE_ROBOT_BODY_ACCELEROMETER_RAW -->
    <string name="sensor_type_robot_body_accelerometer_raw_title">TYPE_ROBOT_BODY_ACCELEROMETER_RAW</string>

    <string name="sensor_type_robot_body_accelerometer_raw_value0_text">value 0: Robot body acceleration force along the x axis(including gravity) (m/s^2):</string>
    <string name="sensor_type_robot_body_accelerometer_raw_value0_value">N/A</string>

    <string name="sensor_type_robot_body_accelerometer_raw_value1_text">value 1: Robot body acceleration force along the y axis(including gravity) (m/s^2):</string>
    <string name="sensor_type_robot_body_accelerometer_raw_value1_value">N/A</string>

    <string name="sensor_type_robot_body_accelerometer_raw_value2_text">value 2: Robot body acceleration force along the z axis(including gravity) (m/s^2):</string>
    <string name="sensor_type_robot_body_accelerometer_raw_value2_value">N/A</string>


    <!-- TYPE_ROBOT_BODY_GYROSCOPE_RAW -->
    <string name="sensor_type_robot_body_gyroscope_raw_title">TYPE_ROBOT_BODY_GYROSCOPE_RAW</string>

    <string name="sensor_type_robot_body_gyroscope_raw_value0_text">value 0: Robot body rate of rotation around the x axis (rad/s):</string>
    <string name="sensor_type_robot_body_gyroscope_raw_value0_value">N/A</string>

    <string name="sensor_type_robot_body_gyroscope_raw_value1_text">value 1: Robot body rate of rotation around the y axis (rad/s):</string>
    <string name="sensor_type_robot_body_gyroscope_raw_value1_value">N/A</string>

    <string name="sensor_type_robot_body_gyroscope_raw_value2_text">value 2: Robot body rate of rotation around the z axis (rad/s):</string>
    <string name="sensor_type_robot_body_gyroscope_raw_value2_value">N/A</string>


    <!-- TYPE_ROBOT_MOTOR -->
    <string name="sensor_type_robot_motor_title">TYPE_ROBOT_MOTOR</string>

    <string name="sensor_type_robot_motor_value0_text">value 0: Neck pitch current (A):</string>
    <string name="sensor_type_robot_motor_value0_value">N/A</string>

    <string name="sensor_type_robot_motor_value1_text">value 1: Wheel left current (A):</string>
    <string name="sensor_type_robot_motor_value1_value">N/A</string>

    <string name="sensor_type_robot_motor_value2_text">value 2: Wheel right current (A):</string>
    <string name="sensor_type_robot_motor_value2_value">N/A</string>

    <string name="sensor_type_robot_motor_value3_text">value 3: Neck pitch PWM (Counts):</string>
    <string name="sensor_type_robot_motor_value3_value">N/A</string>

    <string name="sensor_type_robot_motor_value4_text">value 4: Wheel left PWM (Counts):</string>
    <string name="sensor_type_robot_motor_value4_value">N/A</string>

    <string name="sensor_type_robot_motor_value5_text">value 5: Wheel right PWM (Counts):</string>
    <string name="sensor_type_robot_motor_value5_value">N/A</string>


    <!-- TYPE_ROBOT_NECK_TRAJECTORY -->
    <string name="sensor_type_robot_neck_trajectory_title">TYPE_ROBOT_NECK_TRAJECTORY</string>

    <string name="sensor_type_robot_neck_trajectory_value0_text">value 0: Robot neck pitch (Radian):</string>
    <string name="sensor_type_robot_neck_trajectory_value0_value">N/A</string>


    <!-- TYPE_ROBOT_WHEEL_TRAJECTORY -->
    <string name="sensor_type_robot_wheel_trajectory_title">TYPE_ROBOT_WHEEL_TRAJECTORY</string>

    <string name="sensor_type_robot_wheel_trajectory_value0_text">value 0: Robot wheel left (m/s):</string>
    <string name="sensor_type_robot_wheel_trajectory_value0_value">N/A</string>

    <string name="sensor_type_robot_wheel_trajectory_value1_text">value 1: Robot wheel right (m/s):</string>
    <string name="sensor_type_robot_wheel_trajectory_value1_value">N/A</string>


    <!-- TYPE_ROBOT_COLOR-->
    <string name="sensor_type_robot_color_title">TYPE_ROBOT_COLOR</string>

    <string name="sensor_type_robot_color_value0_text">value 0: Center R (Unitless):</string>
    <string name="sensor_type_robot_color_value0_value">N/A</string>

    <string name="sensor_type_robot_color_value1_text">value 1: Center G (Unitless):</string>
    <string name="sensor_type_robot_color_value1_value">N/A</string>

    <string name="sensor_type_robot_color_value2_text">value 2: Center B (Unitless):</string>
    <string name="sensor_type_robot_color_value2_value">N/A</string>

    <string name="sensor_type_robot_color_value3_text">value 3: Left R (Unitless):</string>
    <string name="sensor_type_robot_color_value3_value">N/A</string>

    <string name="sensor_type_robot_color_value4_text">value 4: Left G (Unitless):</string>
    <string name="sensor_type_robot_color_value4_value">N/A</string>

    <string name="sensor_type_robot_color_value5_text">value 5: Left B (Unitless):</string>
    <string name="sensor_type_robot_color_value5_value">N/A</string>

    <string name="sensor_type_robot_color_value6_text">value 6: Right R (Unitless):</string>
    <string name="sensor_type_robot_color_value6_value">N/A</string>

    <string name="sensor_type_robot_color_value7_text">value 7: Right G (Unitless):</string>
    <string name="sensor_type_robot_color_value7_value">N/A</string>

    <string name="sensor_type_robot_color_value8_text">value 8: Right B (Unitless):</string>
    <string name="sensor_type_robot_color_value8_value">N/A</string>

</resources>
