<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="@string/sensor_type_robot_color_title"
        android:textColor="#F5DC49" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value0_text"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:text="@string/sensor_type_robot_color_value0_text" />

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value0_value"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:text="@string/sensor_type_robot_color_value0_value" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value1_text"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:text="@string/sensor_type_robot_color_value1_text" />

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value1_value"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:text="@string/sensor_type_robot_color_value1_value" />
    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value2_text"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:text="@string/sensor_type_robot_color_value2_text" />

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value2_value"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:text="@string/sensor_type_robot_color_value2_value" />
    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value3_text"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:text="@string/sensor_type_robot_color_value3_text" />

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value3_value"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:text="@string/sensor_type_robot_color_value3_value" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value4_text"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:text="@string/sensor_type_robot_color_value4_text" />

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value4_value"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:text="@string/sensor_type_robot_color_value4_value" />
    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value5_text"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:text="@string/sensor_type_robot_color_value5_text" />

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value5_value"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:text="@string/sensor_type_robot_color_value5_value" />
    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value6_text"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:text="@string/sensor_type_robot_color_value6_text" />

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value6_value"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:text="@string/sensor_type_robot_color_value6_value" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value7_text"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:text="@string/sensor_type_robot_color_value7_text" />

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value7_value"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:text="@string/sensor_type_robot_color_value7_value" />
    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value8_text"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:text="@string/sensor_type_robot_color_value8_text" />

        <TextView
            android:id="@+id/id_sensor_type_robot_color_value8_value"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:text="@string/sensor_type_robot_color_value8_value" />
    </TableRow>


    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />
</TableLayout>