<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="@string/sensor_type_robot_neck_trajectory_title"
        android:textColor="#F5DC49" />


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/id_sensor_type_robot_neck_trajectory_value0_text"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_column="0"
            android:text="@string/sensor_type_robot_neck_trajectory_value0_text" />

        <TextView
            android:id="@+id/id_sensor_type_robot_neck_trajectory_value0_value"
            android:layout_height="50dp"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:text="@string/sensor_type_robot_neck_trajectory_value0_value" />
    </TableRow>


    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />
</TableLayout>